--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eth-revert-reason": "^1.0.3",
     "ethers": "^5.7.2",
     "framer-motion": "^7.2.0",
+    "javascript-time-ago": "^2.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
